--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>title</title>
     <script src="http://d3js.org/d3.v4.js" charset="utf-8"></script>
+    <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- jQuery BBQ: for url param parsing -->
+    <script src="../static/js/jquery.ba-bbq.js"></script>
     <link rel="stylesheet" href="../static/css/styles.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
