--- a/templates/rules.html
+++ b/templates/rules.html
@@ -5,24 +5,22 @@
     <table id="rule-table" class="table table-striped table-dark">
         <thead>
         <tr>
-            <th scope="col">#</th>
             <th scope="col">Name</th>
-            <th scope="col">Rule</th>
             <th scope="col">Action</th>
         </tr>
 
         </thead>
         <tbody>
-        <tr>
-            <th scope="row">1</th>
-            <td>Otto</td>
-            <td>@mdo</td>
-            <td>
-                <button type="button" class="btn btn-success">Rename</button>
-                <button type="button" class="btn btn-danger">Delete</button>
-                <a type="button" class="btn btn-primary" href="">Jump!</a>
-            </td>
-        </tr>
+        <!--<tr>-->
+            <!--<th scope="row">1</th>-->
+            <!--<td>Otto</td>-->
+            <!--<td>@mdo</td>-->
+            <!--<td>-->
+                <!--<button type="button" class="btn btn-success">Rename</button>-->
+                <!--<button type="button" class="btn btn-danger">Delete</button>-->
+                <!--<a type="button" class="btn btn-primary" href="">Jump!</a>-->
+            <!--</td>-->
+        <!--</tr>-->
         </tbody>
     </table>
 </div>
