--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -186,28 +186,35 @@ h1 {
     right: 30px;
 }
 
-#container {
+#search-container {
     position: relative;
-    height: 9em;
+    height: 14em;
     width: 90%;
-    margin: 20px auto;
-    background: #f8f9fa;
+    margin: 30px auto;
+    background: #1967d2;
     text-align: left;
     white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
     vertical-align: middle;
+    border-radius: 15px;
+    padding-top: 10px;
 }
 
-#container select {
+#search-container select {
     display: inline-block;
     width: 14em;
-    height: 6em;
+    height: 11em;
     margin: 0.5em;
     border: 1px solid #A9A9A9;
     padding: 3px;
     white-space: normal;
     text-align: center;
+    background-color: #5f9aec;
+    color: white;
+    border-radius: 15px;
+
+
 }
 
 #timepicker {
@@ -222,4 +229,13 @@ p.verification-text {
     left: 0;
     padding-left: 10px;
     width: 0;
+}
+
+.navbar-title {
+    color: white;
+    float: left;
+    height: 50px;
+    padding: 15px 15px;
+    font-size: 20px;
+    line-height: 20px;
 }
