--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 
 {% block body %}
-<div id="container" style="height:200px">
+<h2 style="text-align: center;">
+    Anomalies
+</h2>
+<hr>
+<h4>
+    Point Selector
+</h4>
+<div id="search-container" style="height:200px">
     <form id="series-0" class="series">
         <select class="building" multiple>
         </select>
@@ -22,24 +29,40 @@
         <select class="measurement" multiple>
         </select>
         <p class="point-verification-text"></p>
-        <input type="text" class="value-query" placeholder="Value Query"/>
+
         <p class="value-verification-text"></p>
         <br>
         <br>
     </form>
 </div>
-<div id="timepicker">
-    <input type="text" name="datetimes" id="daterange"/>
-    <button id="submit-search-query">Search</button>
-    <input type="radio" name="visualization" value="table" checked> Table<br>
-    <input type="radio" name="visualization" value="graph"> Graph<br>
+<div class="row">
+    <div id="foobar" class="col-md-6 form-inline col-md-offset-3">
+        <div class="col-md-4">
+            <input type="text" class="value-query form-control" placeholder="Value Query" style="width: 100%;"/>
+        </div>
+        <div class=" form-group col-md-6">
+            <div id="timepicker" class="input-group" style="width: 100%">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                <input type="text" class="form-control" name="datetimes" id="daterange"
+                       style="background-color: white; cursor: pointer" readonly/>
+            </div>
+        </div>
+        <div class="form-group col-md-2">
+            <button id="submit-search-query" type="button" class="btn btn-primary">Graph</button>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <p id="point-verification-text"></p>
+    </div>
 </div>
+<hr>
+
 
 <div class="col-md-10 svg" id="visualization"></div>
 <div class="col-md-2" id="anomalous-points"></div>
 
 
-<div id="result-table">
+<div id="result-table" hidden>
     <table class="table">
         <thead>
         <tr>
