--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -36,20 +36,20 @@
     </form>
 </div>
 <div class="row">
-    <div id="foobar" class="col-md-6 form-inline col-md-offset-3">
-        <div class="col-md-4">
+    <div id="foobar" class="col-md-8 form-inline col-md-offset-2">
+        <div class="col-md-3">
             <input type="text" class="value-query form-control" placeholder="Value Query" style="width: 100%;"/>
         </div>
-        <div class=" form-group col-md-6">
+        <div class=" form-group col-md-5">
             <div id="timepicker" class="input-group" style="width: 100%">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                 <input type="text" class="form-control" name="datetimes" id="daterange"
                        style="background-color: white; cursor: pointer" readonly/>
             </div>
         </div>
-        <div class="form-group col-md-2">
-            <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #563d7c">Graph</button>
-            <button id="create-rule">Create Alert Rule</button>
+        <div class="form-group col-md-4">
+            <button type="button" id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #563d7c">Graph</button>
+            <button type="button" id="create-rule" class="btn btn-secondary">Create Alert Rule</button>
         </div>
     </div>
     <div class="col-md-2">
