--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -38,7 +38,7 @@
 <div class="row">
     <div id="foobar" class="col-md-8 form-inline col-md-offset-2">
         <div class="col-md-3">
-            <input type="text" class="value-query form-control" placeholder="Value Query" style="width: 100%;"/>
+            <input id="value-query" type="text" class="value-query form-control" placeholder="Value Query" style="width: 100%;"/>
         </div>
         <div class=" form-group col-md-5">
             <div id="timepicker" class="input-group" style="width: 100%">
